# the-bureaucracy-buster-bot

./: .env  .env.template  .gitignore  README.md  main.py  pyproject.toml
data/: gkodeksrf_oglavleniye.html
src/: graph_model.py  vector_database_process.py
src/frontend/: web_app.py
src/telegram/: telegram_bot.py
